环境配置和网页头部的建设

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Document</title>
+    <title>主页</title>
+    <!-- <link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+<div class="wrap">
+    <div class="container">
+        <!-- 头部复用 -->
+        <div class="header_container"></div>
+    </div>
+</div>
 
+    <script type="text/javascript" src="lib/requirejs/require.js" data-main="js/index"></script>
 </body>
 </html>
