--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,79 @@
 <head>
     <meta charset="UTF-8" />
     <title>主页</title>
-    <!-- <link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.min.css"> -->
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/footer.css">
 </head>
+
 <body>
+
 <div class="wrap">
-    <div class="container">
+    <div class="full-width">
         <!-- 头部复用 -->
         <div class="header_container"></div>
+
+        <!-- banner -->
+        <div class="banner">
+
+
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+
+                </ol>
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                        <img src="images/banner1.jpg" title= "春夏出游装备指南" alt="春夏出游装备指南">
+                    </div>
+                    <div class="item">
+                        <img src="images/banner2.jpg" title="每一天都值得认真对待" alt="每一天都值得认真对待">
+                    </div>
+                    <div class="item">
+                        <img src="images/banner3.jpg" title="优雅轻奢美包，女神气质UP UP UP" alt="优雅轻奢美包，女神气质UP UP UP">
+                    </div>
+                    <div class="item">
+                        <img src="images/banner4.jpg" title="年中大促 美容护肤满199减20" alt="年中大促 美容护肤满199减20">
+                    </div>
+                    <div class="item">
+                        <img src="images/banner5.jpg" title="个护全场满99元立减10元" alt="个护全场满99元立减10元">
+                    </div>
+
+                </div>
+
+                <!-- Controls -->
+                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+
+        <!-- content -->
+        <div class="content"></div>
+
+        <!-- 尾部复用 -->
+        <div class="footer_container"></div>
     </div>
 </div>
 
-    <script type="text/javascript" src="lib/requirejs/require.js" data-main="js/index"></script>
+
+    <!-- <script type="text/javascript">
+        $(".carousel").carousel();
+    </script> -->
+
+<script type="text/javascript" src="lib/requirejs/require.js" data-main="js/index"></script>
+
 </body>
 </html>
