列表页面和详情页面

--- a/src/html/detail.html
+++ b/src/html/detail.html
@@ -6,18 +6,152 @@
     <link rel="stylesheet" type="text/css" href="/lib/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" type="text/css" href="/css/footer.css">
+    <link rel="stylesheet" type="text/css" href="/css/detail.css">
 </head>
 
 <body>
-
-
-
 <div class="wrap">
     <div class="full-width">
         <!-- 头部复用 -->
         <div class="header_container"></div>
 
         <!-- content -->
+        <div class="content">
+            <div class="main">
+                <div>
+                    <div class="breadcrumbs">
+                        <ul>
+                            <li class="home">
+                                <a href="/index.html">主页</a>
+                                <span>/</span>
+                            </li>
+                            <li class="category_jjsh"><span>【香港直邮】 加拿大 Jamieson 健美生 鳕鱼肝油软胶囊</span></li>
+                        </ul>
+                    </div>
+
+                    <div class="product-essential">
+                        <div class="product_img_box">
+                            <p class="product_image">
+                                <a href="#" class="zoomBtn"><span>Zoom</span></a>
+                            </p>
+                            <p class="zoom-notice">点击上方图片预览大图</p>
+                            <div class="thumbbox">
+                                <div class="jcarousel-container">
+                                    <div class="jcarousel-clip">
+                                        <ul class="jcarousel-list">
+                                            <li><a href="#"><img src="/images/jms064642022363-ddc79f.jpg" alt=""></a></li>
+                                        </ul>
+                                    </div>
+                                    <div class="jcarousel-prev"></div>
+                                    <div class="jcarousel-next"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="productDetailBox">
+                            <form action="">
+                                <div class="product-shop">
+                                    <div class="product_left">
+                                        <div class="product-name">
+                                            <h1><a href="#"></a>
+                                            【香港直邮】 加拿大  Jamieson 健美生 儿童 鳕鱼肝油软胶囊 100粒
+                                            </h1>
+                                        </div>
+
+                                        <div class="activites_list">
+                                            <div class="item_title">促销：</div>
+                                            <div class="info_item">
+                                                <a href="javascript:void(0);"><span>Jamieson 健美生 满两件立减10元</span></a>
+                                            </div>
+                                        </div>
+
+                                        <div class="stock_box">
+                                            <p>库存： <span>有货</span></p>
+                                        </div>
+
+                                        <div class="pro-left">
+                                            <div class="short-description">
+                                                <div class="std">鳕鱼肝油 液体黄金 富含维生素A+D！</div>
+                                                <p style="color:red;"><strong>全时在线用户您好，您所选购的是香港直邮商品，由于需要海关清关并从香港发货，因此时间会有延误，一般7~15个工作日会到您的手里，还请耐心等待！</strong></p>
+                                            </div>
+                                            <div class="add_to_cart">
+                                                <div class="add_to_box">
+                                                    <p>购买每份此产品最少可以获得<span></span>积分</p>
+                                                    <div class="price_box">
+                                                        <div class="price_box_">
+                                                            <p>
+                                                                <span class="old_price">￥193.50</span>
+                                                                <spab class="special_price">￥129.00</spab>
+                                                            </p>
+                                                        </div>
+                                                    </div>
+                                                    <div class="add_to_cart_">
+                                                        <label for="qty">数量：</label>
+                                                        <div class="qty_pan">
+                                                            <input type="text" id="qty" name="" value="1">
+                                                            <div class="add"></div>
+                                                            <div class="dec"></div>
+                                                        </div>
+                                                        <button type="button" class="button" title="添加到购物车"><span>添加到购物车</span></button>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <ul class="add_to_links">
+                                                <li><a href="#">收藏该商品<li>
+                                                <li><a href="#">加入商品对比</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+
+                                    <div class="static_links">
+                                        <div class="static_links_pan">
+                                            <a href="#"><span>品质保证 </span>商品100%国际贸易原装进口</a>
+                                            <a href="#"><span>即时送达 </span>直营服务区享受即时达运送</a>
+                                            <a href="#" style="border:none;"><span>运费减免 </span>详情参见配送费收取标准</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="product_right">
+                            <div class="productdBanner">
+                                <a href="#">
+                                    <img src="/images/2016baoyouzhengce.jpg" alt="">
+                                </a>
+                            </div>
+                            <div class="product_custom_content">
+                                <ul>
+                                    <li><span></span><p>世界优质商品荟萃，消费<br />化繁为简。</p></li>
+                                    <li><span></span><p>全时在线与您共同驾驭健康，<br />尊享纯净安全。</p></li>
+                                    <li><span></span><p>商品均由全时在线的进口货仓<br />直接递达至最终客户手中。</p></li>
+                                    <li><span></span><p>致力于建设诚信、透明、高<br />效、节约的新商业文明。</p></li>
+                                    <li><span></span><p>来自全球，服务中国。与我们<br />一起，改变生活、工作和娱乐<br />方式。</p></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div id="product-view-rec">
+                        <article>
+                            <h4>相关推荐</h4>
+                            <ul class="goodslst">
+
+                            </ul>
+                        </article>
+                    </div>
+
+                    <div class="layout-box">
+                        <div class="sidebar">
+                            <div class="product-view">
+                                <h4>看了又看</h4>
+                            </div>
+                            <div class="product-view"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
 
 
@@ -28,10 +162,25 @@
 
 
 
-    <!-- <script type="text/javascript">
-        $(".carousel").carousel();
-    </script> -->
 
-<script type="text/javascript" src="../lib/requirejs/require.js" data-main="/js/login"></script>
+<script type="text/javascript" src="/lib/requirejs/require.js" data-main="/js/index"></script>
+
+<script type="text/html" id="xgtj_temp">
+    {{ each products prod }}
+        <li class="newRecomItemWrap">
+            <a href="#">
+                <img src="/{{prod.img}}" >
+            </a>
+            <p class="itemTitle"><a href="#">{{prod.title}}</a></p>
+            <div class="itemInfo">
+                <p>
+                    ￥{{prod.price1.toFixed(2)}}
+                    <span class="special_price">￥{{prod.price2.toFixed(2)}}</span>
+                </p>
+
+            </div>
+        </li>
+    {{/each}}
+</script>
 </body>
 </html>
