--- a/src/index.html
+++ b/src/index.html
@@ -142,8 +142,8 @@
                 <div class="layout_block2">
                     <div class="layout_block2_box">
                         <div class="show">
-                            <a href="#">
-                                <img src="/images/mzhf_01_01.jpg" >
+                            <a href="#"  class="active">
+                                <img src="/images/mzhf_01_01.jpg">
                                 <div class="des">360°眼部护理，打造明媚双眸</div>
                             </a>
                             <a href="#">
@@ -215,7 +215,7 @@
                 <div class="layout_block2">
                     <div class="layout_block2_box">
                         <div class="show">
-                            <a href="#">
+                            <a href="#"  class="active">
                                 <img src="/images/myyp_01_01.jpg" >
                                 <div class="des">营养更均衡，宝宝更健康</div>
                             </a>
@@ -287,7 +287,7 @@
                 <div class="layout_block2">
                     <div class="layout_block2_box">
                         <div class="show">
-                            <a href="#">
+                            <a href="#"  class="active">
                                 <img src="/images/grhl_01_01.jpg" >
                                 <div class="des">细腻滋润，还您纤纤玉手 </div>
                             </a>
@@ -360,7 +360,7 @@
                 <div class="layout_block2">
                     <div class="layout_block2_box">
                         <div class="show">
-                            <a href="#">
+                            <a href="#"  class="active">
                                 <img src="/images/spbj_01_01.jpg" >
                                 <div class="des">天然蜂蜜，滋补佳品</div>
                             </a>
@@ -440,7 +440,7 @@
                 <div class="layout_block2">
                     <div class="layout_block2_box">
                         <div class="show">
-                            <a href="#">
+                            <a href="#"  class="active">
                                 <img src="/images/xbfs_01_01.jpg" >
                                 <div class="des">
                            穿UGG，感受冬天的舒适温暖
@@ -523,7 +523,7 @@
                 <div class="layout_block2">
                     <div class="layout_block2_box">
                         <div class="show">
-                            <a href="#">
+                            <a href="#"  class="active">
                                 <img src="/images/jjsh_01_01.jpg" >
                                 <div class="des">
                             贝克曼博士，去污有一套
@@ -606,7 +606,7 @@
                 <div class="layout_block2">
                     <div class="layout_block2_box">
                         <div class="show">
-                            <a href="#">
+                            <a href="#"  class="active">
                                 <img src="/images/car-1-1.jpg" >
                                 <div class="des">2016年款福特野马白金版<br />自由奔放 动力卓越</div>
                             </a>
